# songwhip-bot-rs

./: .dockerignore  Dockerfile  README.md  _event_callback.json  _songwhip_response.json  event_callback.json  fly.toml  manifest.yml
crates/bot_server/: Cargo.toml
crates/bot_server/src/: main.rs
crates/songwhip_bot/: Cargo.toml  output.json  testing.json
crates/songwhip_bot/src/: lib.rs  songlink.rs  songwhip.rs  utils.rs
crates/songwhip_bot/src/slack/: commands_api.rs  events_api.rs  interaction_api.rs  mod.rs  utils.rs  verification.rs
